--- a/index.html
+++ b/index.html
@@ -12,17 +12,6 @@
     <!--Loaded Font Awesome Icon-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">  
 
-    <!--c3 css for chart presentability-->
-    <link rel="stylesheet/c3.css" href="https://cdnjs.cloudflare.com/ajax/libs/c3/0.4.21/c3.css"/>
-
-    <!--C3js for data visualization-->
-    <script src="    https://cdnjs.cloudflare.com/ajax/libs/d3/4.13.0/d3.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/c3/0.4.21/c3.min.js"></script>
-
-    <!--Papa parse for CSV data--> 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/4.3.6/papaparse.min.js"></script>
-
-
 </head>
 
 <body>
@@ -38,8 +27,12 @@
     </section>
  <!-- divide page into blocks to display different graphp visualizations--> 
  <div class="section group">
-    <div class = "col span_1_of_2">
+    <div class = "col span_1_of_5">
         <div class="box">
+            <div>
+                <!--cal; type vs number of occurrences-->
+                <iframe width="900" height="800" frameborder="0" scrolling="no" src="https://plot.ly/~kartiktennis/0"></iframe>
+            </div>
             
         </div>
     </div>
