--- a/index.html
+++ b/index.html
@@ -25,15 +25,15 @@
             </div>
         </div>
     </section>
- <!-- divide page into blocks to display different graphp visualizations--> 
+ <!-- divide page into blocks to display different graph visualizations--> 
+
  <div class="section group">
-    <div class = "col span_1_of_5">
-        <div class="box">
+    <div>
+        <div class="box is-pulled-left">
             <div>
                 <!--cal; type vs number of occurrences-->
                 <iframe width="900" height="800" frameborder="0" scrolling="no" src="https://plot.ly/~kartiktennis/0"></iframe>
             </div>
-            
         </div>
     </div>
 </div> 
