rearrangment of box elements for graphs

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </section>
  <!-- divide page into blocks to display different graph visualizations--> 
 
- <div class="section group">
+ <div class="section group is-pulled-left">
     <div>
         <div class="box is-pulled-left">
             <div>
