added location data with lat and long coordinates

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div>
         <div class="box is-pulled-left">
             <div>
-                <!--cal; type vs number of occurrences-->
+                <!--call type vs number of occurrences-->
                 <iframe width="900" height="800" frameborder="0" scrolling="no" src="https://plot.ly/~kartiktennis/0"></iframe>
             </div>
         </div>
