--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     </div>
             </div>
         </div>  
-<!--create map-->
+<!--create map with mapbox-->
 <div class="section group">
         <div>
         <div id="graph-box" class="box is-fluid">
