--- a/index.html
+++ b/index.html
@@ -51,18 +51,68 @@
 
 <!--create map with mapbox for data visualization-->
 <div class="section group">
-        <div>
-        <div id="graph-box" class="box is-fluid">
-            <!--left half of box element--> 
-                <div class="has-text-left">
-                    <h1 class="title is-2">Location & Incident Type</h1>
-                    <!--call type vs number of occurrences-->
-                    <iframe src="map.html" frameborder="0" scrolling="no" onload="resizeIframe(this)" width="50%" height="650" style=" border:none; margin:0; bottom:0; overflow:hidden; z-index:999999;">
-                            Sorry, your browser does not support inline frames.
-                    </iframe>
+                        <!--use column class to divide up elements--> 
+                        <div class="columns"> 
+                            <div class="column is-half is-fluid">
+                                 <div>
+                                        <h1 class="title is-2">Location & Incident Type</h1>
+                                        <!--call type vs number of occurrences-->
+                                        <iframe src="map.html" frameborder="0" scrolling="no" onload="resizeIframe(this)" width="100%" height="650" style=" border:none; margin:0; bottom:0; overflow:hidden; z-index:999999;">
+                                                Sorry, your browser does not support inline frames.
+                                        </iframe>
+                                    </div> 
+                            </div>
+                            <!--additional data next to location incident map-->
+                            <!--make these tiles buttons-->
+                            <div class="column">
+                                    <h1 class="title is-right is-2">Additional Information</h1>
+                                    <div class="tile is-ancestor">
+                                            <div class="tile is-vertical is-8">
+                                              <div class="tile">
+                                                <div class="tile is-parent is-vertical">
+                                                  <article class="button tile is-child notification is-primary">
+                                                    <p class="title">Vertical...</p>
+                                                    <p class="subtitle">Top tile</p>
+                                                  </article>
+                                                  <article class="button tile is-child notification is-warning">
+                                                    <p class="title">...tiles</p>
+                                                    <p class="subtitle">Bottom tile</p>
+                                                  </article>
+                                                </div>
+                                                <div class="tile is-parent">
+                                                  <article class="button tile is-child notification is-info">
+                                                    <p class="title">Middle tile</p>
+                                                    <p class="subtitle">With an image</p>
+                                                    <figure class="image is-4by3">
+                                                      <img src="https://bulma.io/images/placeholders/640x480.png">
+                                                    </figure>
+                                                  </article>
+                                                </div>
+                                              </div>
+                                              <div class="tile is-parent">
+                                                <article class="button tile is-child notification is-danger">
+                                                  <p class="title">Wide tile</p>
+                                                  <p class="subtitle">Aligned with the right tile</p>
+                                                  <div class="content">
+                                                    <!-- Content -->
+                                                  </div>
+                                                </article>
+                                              </div>
+                                            </div>
+                                            <div class="tile is-parent">
+                                              <article class="tile is-child notification is-success">
+                                                <div class="content">
+                                                  <p class="title">Tall tile</p>
+                                                  <p class="subtitle">With even more content</p>
+                                                  <div class="content">
+                                                    <!-- Content -->
+                                                  </div>
+                                                </div>
+                                              </article>
+                                            </div>
+                                          </div>
+                            </div> 
                 </div>
-
-        </div>
 </div>
 
 
