--- a/index.html
+++ b/index.html
@@ -64,29 +64,35 @@
                             </div>
                             <!--additional data next to location incident map-->
                             <!--make these tiles buttons-->
+                            <!--load icons for different tiles to represent the different incidents with longest dispatch times-->
                             <div class="column">
-                                    <h1 class="title is-right is-2">Additional Information</h1>
+                                    <h1 class="title is-right is-2">Click Icons for areas with longest dispatch times!</h1>
                                     <div class="tile is-ancestor">
                                             <div class="tile is-vertical is-8">
                                               <div class="tile">
                                                 <div class="tile is-parent is-vertical">
                                                   <article class="button tile is-child notification is-primary">
-                                                    <p class="title">Vertical...</p>
-                                                    <p class="subtitle">Top tile</p>
+                                                        <figure class="image is-4by3">
+                                                                <img src="structure_fire_icon.png">
+                                                        </figure>
                                                   </article>
                                                   <article class="button tile is-child notification is-warning">
-                                                    <p class="title">...tiles</p>
-                                                    <p class="subtitle">Bottom tile</p>
+                                                        <figure class="image is-4by3">
+                                                                <img src="alarm_icon.png">
+                                                        </figure>
                                                   </article>
                                                 </div>
-                                                <div class="tile is-parent">
+                                                <div class="tile is-parent is-vertical">
                                                   <article class="button tile is-child notification is-info">
-                                                    <p class="title">Middle tile</p>
-                                                    <p class="subtitle">With an image</p>
                                                     <figure class="image is-4by3">
-                                                      <img src="https://bulma.io/images/placeholders/640x480.png">
+                                                      <img src="hospital_icon.png">
                                                     </figure>
                                                   </article>
+                                                        <article class="button tile is-child notification is-white is-outlined">
+                                                          <figure class="image is-4by3">
+                                                            <img src="traffic_icon.png">
+                                                          </figure>
+                                                        </article>
                                                 </div>
                                               </div>
                                               <div class="tile is-parent">
@@ -100,13 +106,9 @@
                                               </div>
                                             </div>
                                             <div class="tile is-parent">
-                                              <article class="tile is-child notification is-success">
+                                              <article class="tile is-child notification is-offwhite has-text-centered">
                                                 <div class="content">
-                                                  <p class="title">Tall tile</p>
-                                                  <p class="subtitle">With even more content</p>
-                                                  <div class="content">
-                                                    <!-- Content -->
-                                                  </div>
+                                                  <p class="title">Map Legend</p>
                                                 </div>
                                               </article>
                                             </div>
