--- a/index.html
+++ b/index.html
@@ -7,22 +7,12 @@
     <title>Capital One SFPD Data Analysis</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="stylesheet" type="text/css" href="styles.min.css"> 
-
     <!--Bulma CSS for presetability-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.2/css/bulma.css" />
 
     <!--Loaded Font Awesome Icon-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"> 
 
-   
-
-    <!--resizes iframe map element --> 
-    <script>
-            function resizeIframe(obj) {
-              obj.style.height = obj.contentWindow.document.body.scrollHeight + 'px';
-            }
-    </script>
 </head>
 
 <body>
@@ -55,9 +45,9 @@
                         <div class="columns"> 
                             <div class="column is-half is-fluid">
                                  <div>
-                                        <h1 class="title is-2">Location & Incident Type</h1>
+                                        <h1 class="title is-2">Location & Incident Type Map</h1>
                                         <!--call type vs number of occurrences-->
-                                        <iframe src="map.html" frameborder="0" scrolling="no" onload="resizeIframe(this)" width="100%" height="650" style=" border:none; margin:0; bottom:0; overflow:hidden; z-index:999999;">
+                                        <iframe src="map.html" frameborder="0" scrolling="no" width="100%" height="650" style=" border:none; margin:0; bottom:0; overflow:hidden; z-index:999999;">
                                                 Sorry, your browser does not support inline frames.
                                         </iframe>
                                     </div> 
@@ -71,30 +61,37 @@
                                             <div class="tile is-vertical is-8">
                                               <div class="tile">
                                                 <div class="tile is-parent is-vertical">
-                                                  <article class="button tile is-child notification is-primary">
+                                                    <!--show structure fire map on popup-->
+                                                  <article class="tile is-child notification button is-primary">
                                                         <figure class="image is-4by3">
                                                                 <img src="structure_fire_icon.png">
                                                         </figure>
                                                   </article>
+
                                                   <article class="button tile is-child notification is-warning">
                                                         <figure class="image is-4by3">
                                                                 <img src="alarm_icon.png">
                                                         </figure>
                                                   </article>
+
                                                 </div>
                                                 <div class="tile is-parent is-vertical">
+
                                                   <article class="button tile is-child notification is-info">
                                                     <figure class="image is-4by3">
                                                       <img src="hospital_icon.png">
                                                     </figure>
                                                   </article>
+
                                                         <article class="button tile is-child notification is-white is-outlined">
                                                           <figure class="image is-4by3">
                                                             <img src="traffic_icon.png">
                                                           </figure>
                                                         </article>
+
                                                 </div>
                                               </div>
+                                              <!--replace the dummy text with something-->
                                               <div class="tile is-parent">
                                                 <article class="button tile is-child notification is-danger">
                                                   <p class="title">Wide tile</p>
@@ -112,13 +109,12 @@
                                                 </div>
                                               </article>
                                             </div>
-                                          </div>
-                            </div> 
-                </div>
+                                    </div>
+                        </div> 
+            </div>
 </div>
 
-
-<!--structue fire map popup modify for popup later-->  
+<!--structure fire map popup modify for popup later-->  
     <div class="section group">
              <div>
             <div id="graph-box" class="box is-fluid">
@@ -130,6 +126,6 @@
                         </iframe>
                     </div>
             </div>
-    </div> 
+        </div>
 </body>
 </html>
