--- a/index.html
+++ b/index.html
@@ -64,13 +64,13 @@
                                                     <!--show structure fire map on popup-->
                                                   <article class="tile is-child notification button is-primary">
                                                         <figure class="image is-4by3">
-                                                                <img src="structure_fire_icon.png">
+                                                                <img src="./Icons/structure_fire_icon.png">
                                                         </figure>
                                                   </article>
 
                                                   <article class="button tile is-child notification is-warning">
                                                         <figure class="image is-4by3">
-                                                                <img src="alarm_icon.png">
+                                                                <img src="./Icons/alarm_icon.png">
                                                         </figure>
                                                   </article>
 
@@ -79,21 +79,22 @@
 
                                                   <article class="button tile is-child notification is-info">
                                                     <figure class="image is-4by3">
-                                                      <img src="hospital_icon.png">
+                                                      <img src="./Icons/hospital_icon.png">
                                                     </figure>
                                                   </article>
 
                                                         <article class="button tile is-child notification is-white is-outlined">
                                                           <figure class="image is-4by3">
-                                                            <img src="traffic_icon.png">
+                                                            <img src="./Icons/traffic_icon.png">
                                                           </figure>
                                                         </article>
 
                                                 </div>
                                               </div>
-                                              <!--replace the dummy text with something-->
+
                                               <div class="tile is-parent">
                                                 <article class="button tile is-child notification is-danger">
+                                                   <!--replace the dummy text with something-->
                                                   <p class="title">Wide tile</p>
                                                   <p class="subtitle">Aligned with the right tile</p>
                                                   <div class="content">
@@ -101,6 +102,7 @@
                                                   </div>
                                                 </article>
                                               </div>
+
                                             </div>
                                             <div class="tile is-parent">
                                               <article class="tile is-child notification is-offwhite has-text-centered">
