added toggle functionality for different map layers and updated index

--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
     <!--Loaded Font Awesome Icon-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"> 
 
+    <!--some basic css styling-->
+    <style>
+        h1{
+            text-decoration: underline; 
+        }
+    </style> 
+
 </head>
 
 <body>
@@ -47,7 +54,7 @@
                                  <div>
                                         <h1 class="title is-2">Location & Incident Type Map</h1>
                                         <!--call type vs number of occurrences-->
-                                        <iframe src="map.html" frameborder="0" scrolling="no" width="100%" height="650" style=" border:none; margin:0; bottom:0; overflow:hidden; z-index:999999;">
+                                        <iframe src="toggleLayersMap.html" frameborder="0" scrolling="no" width="100%" height="650" style=" border:none; margin:0; bottom:0; overflow:hidden; z-index:999999;">
                                                 Sorry, your browser does not support inline frames.
                                         </iframe>
                                     </div> 
