--- a/map.html
+++ b/map.html
@@ -31,7 +31,7 @@
     // code from the next step will go here
     map.on('click', function(e) {
   var features = map.queryRenderedFeatures(e.point, {
-    layers: ['location-coordinates'], 
+    layers: ['medical-incident'], 
     layers: ['structure-fires'], 
     layers: ['alarms'],
     layers: ['miscellaneous'] // replace this with the name of the layer
