added map title box

--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
             text-decoration: underline; 
         }
     </style> 
-
-    <script defer type="text/javascript" src="app.js"></script>
+    <sciipt defer type="text/javascript" src="app.js"></script>
     
 </head>
 
