--- a/toggleLayersMap.html
+++ b/toggleLayersMap.html
@@ -9,6 +9,8 @@
     <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.44.1/mapbox-gl.js'></script>
     <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.44.1/mapbox-gl.css' rel='stylesheet' />
     <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
+    <script src='https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v2.2.0/mapbox-gl-geocoder.min.js'></script>
+    <link rel='stylesheet' href='https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v2.2.0/mapbox-gl-geocoder.css' type='text/css' />
 
     <style>
         body { margin:0; padding:0; }
@@ -22,7 +24,7 @@
         background: #fff;
         position: absolute;
         z-index: 1;
-        top: 10px;
+        top: 55px;
         right: 10px;
         border-radius: 3px;
         width: 120px;
@@ -33,7 +35,7 @@
         opacity: 0.5;
         position: absolute;
         z-index: 1;
-        top: 40px;
+        top: 55px;
         right: 100px;
         border-radius: 3px;
         width:300px;
@@ -73,11 +75,11 @@
 </style>
 
 <div id="title-box" class="box has-text-centered">
-    <h1 class="title"><strong>Incident Map</strong></h1>
+    <h1 class="title"><strong>Incident Map</strong>
     <h2 class="subtitle"><strong>Click to toggle!</strong>
-        <span class="icon is-small is-right">
-            <i class="fas fa-angle-double-right"></i>
-        </span>
+          <span class="icon is-small is-right">
+        <i class="fas fa-angle-double-right"></i>
+    </span>
     </h2>
   
 </div> 
@@ -86,19 +88,22 @@
 <div id="map"></div>
 
 <script>
-mapboxgl.accessToken = 'pk.eyJ1Ijoia2FydGlrdGVubmlzIiwiYSI6ImNqZW01dWY0ajAwOGYzMHBsMGlsYXZvNDMifQ.6RYhKUID2mkBoX3YFO3tTQ';
-var map = new mapboxgl.Map({
-    container: 'map',
-    style: 'mapbox://styles/kartiktennis/cjeopwdlo48xx2rqwui738hqb', //mapbox style reference
-    zoom: 13,
-    pitch: 45, // pitch in degrees
-    bearing: -36,
-    center: [-122.4194, 37.7749]
-});
 
-var toggleableLayerIds = [ 'medical-incident', 'structure-fires', 'alarms','miscellaneous' ]; //layer ids to toggle MUST MATCH EXACTLY!
+    mapboxgl.accessToken = 'pk.eyJ1Ijoia2FydGlrdGVubmlzIiwiYSI6ImNqZW01dWY0ajAwOGYzMHBsMGlsYXZvNDMifQ.6RYhKUID2mkBoX3YFO3tTQ';
+    var map = new mapboxgl.Map({
+        container: 'map',
+        style: 'mapbox://styles/kartiktennis/cjeopwdlo48xx2rqwui738hqb', //mapbox style reference
+        zoom: 13,
+        pitch: 45, // pitch in degrees
+        bearing: -36,
+        center: [-122.4194, 37.7749]
+    });
 
+    var toggleableLayerIds = [ 'Medical Incidents', 'Structure Fires', 'Alarms','miscellaneous' ]; //layer ids to toggle MUST MATCH EXACTLY!
 
+    map.addControl(new MapboxGeocoder({
+        accessToken: mapboxgl.accessToken
+    }));
 
 for (var i = 0; i < toggleableLayerIds.length; i++) {
     var id = toggleableLayerIds[i];
