--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
                     <div class="section group">
                          <!--use column class to divide up elements--> 
                         <div class="columns"> 
-                            <div class="column is-half is-fluid">
+                            <div class="column has-text-centered is-half is-fluid">
                                     <!--http://sanfranguide.com/zip-codes/-->
                                     <h1 class="title is-2"> <span class="icon">
-                                            <i class="fa fa-map-marker fa-1x"></i>
-                                    </span>  Longest Dispatch Times by Zipcode</h1>
+                                            <i class="fa fa-map-marker"></i>
+                                    </span>     Longest Dispatch Times by Zipcode</h1>
                                     <!--zipcode for longest dispatch areas-->
                                     <div class="box level">
                                         <div class="level left">
@@ -65,8 +65,13 @@
                                     </div> 
                             </div>
 
-                            <div class="column">
+                            <div class="column has-text-centered">
                                 <!--description goes here-->
+                                <h1 class="title is-2"> <span class="icon">
+                                        <i class="fa fa-clock"></i>
+                                </span>     We can reduce this!</h1>
+
+
                             </div> 
                 </div>
             </div>
